--- a/doingreallife.com/login.html
+++ b/doingreallife.com/login.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Real Life Church" name="author">
   <title>
-    Real Life Church
+    Seventh Days Adventist Church
   </title>
   
   
@@ -220,11 +220,11 @@
         <li class="mb-3">
             <h2 class="footer-heading ">Church Location</h2>
           <div class="footer-text">
-            3561 Landco Dr Suite A
+            Women Development Center
               <br>
-              Bakersfield, CA
+              Pencinema
               <br>
-              93308 
+              Agege, Lagos
               <br>
               <a target="_blank" href="https://www.google.ca/maps?q=Real%20Life%20Church,%20,%20,%20,%20">View on Google Maps</a>
           </div>
@@ -239,12 +239,12 @@
 
     <ul class="list-unstyled footer-text ">
         <li class="mt-1 d-sm-flex">
-          <span class="footer-item-label mr-1"> Phone: </span><a href="tel:1-661-669-7770">661.669.7770</a>
+          <span class="footer-item-label mr-1"> Phone: </span><a href="tel:1-661-669-7770">081 080 7479</a>
         </li>
 
         <li class="mt-1 d-sm-flex">
           
-          <span class="footer-item-label mr-1"><span class="translation_missing" title="translation missing: en.ui.email">Email</span>: </span><a encode="javascript" class="truncate" href="mailto:info@doingreallife.com">info@doingreallife.com</a>
+          <span class="footer-item-label mr-1"><span class="translation_missing" title="translation missing: en.ui.email">Email</span>: </span><a encode="javascript" class="truncate" href="chinazasundaygoodness@gmail.com">chinazasundaygoodness@gmail.com</a>
         </li>
     </ul>
   </div>
@@ -322,14 +322,14 @@
     <ul class="list-unstyled d-flex flex-wrap ">
       
   <li class="social-icon-list-item list-mr-2 mb-2 rounded-sm overflow-hidden d-flex">
-    <a class="svg-link social-icon-link" target="_blank" href="https://www.facebook.com/doingreallifechurch/">
+    <a class="svg-link social-icon-link" target="_blank" href="https://www.linkedin.com/in/chinaza-sunday">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24" height="24" viewbox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve" class="social-icon-svg footer-social-icon"><title>Facebook Icon</title>
 <path d="M24,0v24H0V0H24z M20,2.7h-3.3c-2.5,0-4.7,2.1-4.7,4.7v3.3H9.3v4H12V24h4v-9.3h4v-4h-4V8c0-0.8,0.5-1.3,1.3-1.3H20V2.7z"></path>
 </svg>
 
 </a>  </li>
   <li class="social-icon-list-item list-mr-2 mb-2 rounded-sm overflow-hidden d-flex">
-    <a class="svg-link social-icon-link" target="_blank" href="https://www.instagram.com/doingrealife/">
+    <a class="svg-link social-icon-link" target="_blank" href="https://www.linkedin.com/in/chinaza-sunday/">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24" height="24" viewbox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve" class="social-icon-svg footer-social-icon"><title>Instagram Icon</title>
 <circle cx="12" cy="12" r="2.7"></circle>
 <path d="M15.9,4.9H8.1c-1.7,0-3.2,1.5-3.2,3.2V16c0,1.7,1.5,3.2,3.2,3.2H16c1.7,0,3.2-1.5,3.2-3.2V8.1C19.1,6.4,17.6,4.9,15.9,4.9z   M12,16.4c-2.4,0-4.4-2-4.4-4.4s2-4.4,4.4-4.4s4.4,2,4.4,4.4S14.4,16.4,12,16.4z M16.7,8.4c-0.7,0-1.1-0.5-1.1-1.1  c0-0.7,0.5-1.1,1.1-1.1c0.7,0,1.1,0.5,1.1,1.1C17.7,8,17.3,8.4,16.7,8.4z"></path>
@@ -345,7 +345,7 @@
       </div>
       <div class="d-sm-flex align-items-center">
         <div class="small text-center text-sm-left mb-3 mb-sm-0">
-&copy; 2024 Real Life Church. All Rights Reserved.
+&copy; 2024 Seventh Day Adventist Church.
 | 
   <a class="" href="login.html">Login</a>
 
