--- a/doingreallife.com/index.htm
+++ b/doingreallife.com/index.htm
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Real Life Church" name="author">
   <title>
-    Real Life Church
+    Seventh Day Adventist Church
   </title>
   
   
@@ -136,9 +136,7 @@
   </li>
 
 
-        <li class="menu-item hover-underline-left">
-  <a class="btn btn-submit js-visit-modal-link" data-remote="true" href="/visits/new">PLAN YOUR VISIT</a>
-</li>
+        
     </ul>
   </div>
 </nav>
