--- a/doingreallife.com/login.html
+++ b/doingreallife.com/login.html
@@ -125,9 +125,7 @@
   </li>
 
 
-        <li class="menu-item hover-underline-left">
-  <a class="btn btn-submit js-visit-modal-link" data-remote="true" href="/visits/new">PLAN YOUR VISIT</a>
-</li>
+        
     </ul>
   </div>
 </nav>
@@ -367,7 +365,7 @@
 </svg>
 
     <div class="sr-only">
-      Website Developed by Tithely
+      Website Developed by Chinaza
     </div>
   </a>
 
